--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Send us a message below or email us at <a href="mailto:hello@myai.tools">hello@myai.tools</a>.</p>
-    <p>Or connect on <a href="https://linkedin.com" target="_blank">LinkedIn</a></p>
+    <p>Send us a message below or email us at <a href="mailto:info@integration.help">info@integration.help</a>.</p> 
+    <!-- <p>Or connect on <a href="https://linkedin.com" target="_blank">LinkedIn</a></p>-->
 
     <form action="https://formspree.io/f/mzzvreak" method="POST">
       <label>
