--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
         Your message:
         <textarea name="message" required></textarea>
       </label>
-
+      <!-- Honeypot trap -->
+      <input type="text" name="_gotcha" style="display:none">
       <button type="submit">Send</button>
     </form>
   </section>
