--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Send us a message below or email us at <a href="mailto:info@integration.help">info@integration.help</a>.</p> 
     <!-- <p>Or connect on <a href="https://linkedin.com" target="_blank">LinkedIn</a></p>-->
 
     <form action="https://formspree.io/f/mzzvreak" method="POST">
@@ -162,6 +161,7 @@
     </form>
   </section>
 
+    <p>Or if you'd rather, Send us an email at <a href="mailto:info@integration.help">info@integration.help</a>.</p> 
   <footer>
     <p>&copy; 2025 MyAI.Tools — All rights reserved.</p>
   </footer>
