--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@
       <button type="submit">Send</button>
     </form>
   </section>
-
-    <p>Or if you'd rather, Send us an email at <a href="mailto:info@integration.help">info@integration.help</a>.</p> 
+  <p style="text-align:center;">Or if you'd rather, Send us an email at <a href="mailto:info@integration.help">info@integration.help</a>.</p>
   <footer>
     <p>&copy; 2025 MyAI.Tools — All rights reserved.</p>
   </footer>
